--- a/day_20/exercises_on_dict.ipynb
+++ b/day_20/exercises_on_dict.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1597642453150",
+   "name": "python_defaultSpec_1597674809149",
    "display_name": "Python 3.8.5 32-bit"
   }
  },
@@ -258,11 +258,43 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**6-6. Polling:** Use the code in favorite_languages.py ( page 104 ).\n",
+    "\n",
+    "• Make a list of people who should take the favorite languages poll. Include some names that are already in the dictionary and some that are not.\n",
+    "\n",
+    "• Loop through the list of people who should take the poll. If they have already taken the poll, print a message thanking them for responding. If they have not yet taken the poll, print a message inviting them to take the poll."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Thank you Jen for taking the poll.\nThank you Sarah for taking the poll.\nThank you Phil for taking the poll.\nThank you Edward for taking the poll.\nDear Bella, you are invited to take the poll.\nDear Rose, you are invited to take the poll.\n"
+    }
+   ],
+   "source": [
+    "favorite_languages = {\n",
+    "    'jen' : 'python',\n",
+    "    'sarah' : 'c',\n",
+    "    'edward' : 'ruby',\n",
+    "    'phil' : 'python',\n",
+    "}\n",
+    "people = ['jen', 'sarah', 'phil', 'edward', 'bella', 'rose']\n",
+    "for name in people:\n",
+    "    if name in favorite_languages:\n",
+    "        print(f\"Thank you {name.title()} for taking the poll.\")\n",
+    "    else:\n",
+    "        print(f\"Dear {name.title()}, you are invited to take the poll.\")"
+   ]
   }
  ]
 }
