--- a/day_20/exercises_on_dict.ipynb
+++ b/day_20/exercises_on_dict.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1597674809149",
+   "name": "python_defaultSpec_1597757545899",
    "display_name": "Python 3.8.5 32-bit"
   }
  },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -49,14 +49,14 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "I know Tahera Siddiqua. I miss her very much.\nShe is 24 years old.\nShe lives is Chittagong.\n"
+     "text": "I know Tahera Siddiqua. I miss her very much.\nShe is 20 years old.\nShe lives is Chittagong.\n"
     }
    ],
    "source": [
     "person = {\n",
     "    'first_name' : 'Tahera',\n",
     "    'last_name' : 'Siddiqua',\n",
-    "    'age' : 24,\n",
+    "    'age' : 20,\n",
     "    'city' : 'Chittagong',\n",
     "}\n",
     "print(f\"I know {person['first_name']} {person['last_name']}. I miss her very much.\")\n",
@@ -68,6 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<hr>\n",
     "**6-2. Favorite Numbers:** Use a dictionary to store people’s favorite numbers. Think of five names, and use them as keys in your dictionary. Think of a favorite number for each person, and store each as a value in your dictionary. Print each person’s name and their favorite number. For even more fun, poll a few friends and get some actual data for your program."
    ]
   },
@@ -295,6 +296,337 @@
     "    else:\n",
     "        print(f\"Dear {name.title()}, you are invited to take the poll.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr>\n",
+    "**6-7. People:** Start with the program you wrote for Exercise 6-1. Make two new dictionaries representing different people, and store all three dictionaries in a list called people . Loop through your list of people. As you loop through the list, print everything you know about each person."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "{'first_name': 'tahera', 'last_name': 'siddiqua', 'age': 20, 'city': 'chittagong'}\n{'first_name': 'muhammad', 'last_name': 'ohi', 'age': 6, 'city': 'dhaka'}\n{'fisrt_name': 'amatullah', 'last_name': 'ayesha', 'age': 25, 'city': 'iraq'}\n"
+    }
+   ],
+   "source": [
+    "tahera = {\n",
+    "    'first_name' : 'tahera',\n",
+    "    'last_name' : 'siddiqua',\n",
+    "    'age' : 20,\n",
+    "    'city' : 'chittagong',\n",
+    "    }\n",
+    "ohi = {\n",
+    "    'first_name' : 'muhammad',\n",
+    "    'last_name' : 'ohi',\n",
+    "    'age' : 6,\n",
+    "    'city' : 'dhaka',\n",
+    "    }\n",
+    "ayesha = {\n",
+    "    'fisrt_name' : 'amatullah',\n",
+    "    'last_name' : 'ayesha',\n",
+    "    'age': 25,\n",
+    "    'city' : 'iraq'\n",
+    "    }\n",
+    "people = [tahera, ohi, ayesha]\n",
+    "for person in people:\n",
+    "    print(person)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Tahera Siddiqua, of Chittagong, is 20 years old.\nMuhammad Ohi, of Dhaka, is 6 years old.\nAmatullah Ayesha, of Iraq, is 25 years old.\n"
+    }
+   ],
+   "source": [
+    "# Author's way:\n",
+    "# Making an empty list to store people in:\n",
+    "people = []\n",
+    "\n",
+    "# Defining some people, adding them to the list:\n",
+    "person = {\n",
+    "    'first_name' : 'tahera',\n",
+    "    'last_name' : 'siddiqua',\n",
+    "    'age' : 20,\n",
+    "    'city' : 'chittagong',\n",
+    "    }\n",
+    "people.append(person)\n",
+    "\n",
+    "person = {\n",
+    "    'first_name' : 'muhammad',\n",
+    "    'last_name' : 'ohi',\n",
+    "    'age' : 6,\n",
+    "    'city' : 'dhaka',\n",
+    "    }\n",
+    "people.append(person)\n",
+    "\n",
+    "person = {\n",
+    "    'first_name' : 'amatullah',\n",
+    "    'last_name' : 'ayesha',\n",
+    "    'age': 25,\n",
+    "    'city' : 'iraq'\n",
+    "    }\n",
+    "people.append(person)\n",
+    "\n",
+    "# Displaying all of the information in the dictionary.\n",
+    "for person in people:\n",
+    "    name = person['first_name'].title() + \" \" + person['last_name'].title()\n",
+    "    age = str(person['age'])\n",
+    "    city = person['city'].title()\n",
+    "\n",
+    "    print(name + \", of \" + city + ', is ' + age + \" years old.\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "I miss Tahera.\nI wish you were always a little baby, Ohi.\nYou are my dream girl, Ayesha.\n"
+    }
+   ],
+   "source": [
+    "\n",
+    "#A little fun:\n",
+    "tahera = {\n",
+    "    'first_name' : 'tahera',\n",
+    "    'last_name' : 'siddiqua',\n",
+    "    'age' : 20,\n",
+    "    'city' : 'chittagong',\n",
+    "    }\n",
+    "ohi = {\n",
+    "    'first_name' : 'muhammad',\n",
+    "    'last_name' : 'ohi',\n",
+    "    'age' : 6,\n",
+    "    'city' : 'dhaka',\n",
+    "    }\n",
+    "ayesha = {\n",
+    "    'fisrt_name' : 'amatullah',\n",
+    "    'last_name' : 'ayesha',\n",
+    "    }\n",
+    "people = [tahera, ohi, ayesha]\n",
+    "\n",
+    "if people[0] == tahera:\n",
+    "    print(\"I miss \" + tahera['first_name'].title() + '.')\n",
+    "if people[1] == ohi:\n",
+    "    print(\"I wish you were always a little baby, \" + ohi['last_name'].title() + '.')\n",
+    "if people[2] == ayesha:\n",
+    "    print(\"You are my dream girl, \" + ayesha['last_name'].title() + '.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr>\n",
+    "**6-8. Pets:** Make several dictionaries, where the name of each dictionary is the name of a pet. In each dictionary, include the kind of animal and the owner’s name. Store these dictionaries in a list called pets . Next, loop through your list and as you do print everything you know about each pet."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Ohi has a dog. It is very cute.\nAlfi has a cat. It is very cute.\nShahar has a chicken. It is very cute.\n"
+    }
+   ],
+   "source": [
+    "pets = []\n",
+    "\n",
+    "pet = {\n",
+    "    'kind' : 'dog',\n",
+    "    'owner' : 'ohi',\n",
+    "}\n",
+    "pets.append(pet)\n",
+    "\n",
+    "pet = {\n",
+    "    'kind' : 'cat',\n",
+    "    'owner' : 'alfi',\n",
+    "}\n",
+    "pets.append(pet)\n",
+    "\n",
+    "pet = {\n",
+    "    'kind' : 'chicken',\n",
+    "    'owner' : 'shahar',\n",
+    "}\n",
+    "pets.append(pet)\n",
+    "\n",
+    "for pet in pets:\n",
+    "    type = pet['kind']\n",
+    "    owner = pet['owner']\n",
+    "    print(f\"{owner.title()} has a {type}. It is very cute.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "\nHere's what I know about Piki:\n\tname: Piki\n\tkind: Dog\n\towner: Ohi\n\nHere's what I know about Riku:\n\tname: Riku\n\tkind: Cat\n\towner: Alfi\n\nHere's what I know about Pilu:\n\tname: Pilu\n\tkind: Chicken\n\towner: Shahar\n"
+    }
+   ],
+   "source": [
+    "pets = []\n",
+    "\n",
+    "pet = {\n",
+    "    'name' : 'piki',\n",
+    "    'kind' : 'dog',\n",
+    "    'owner' : 'ohi',\n",
+    "}\n",
+    "pets.append(pet)\n",
+    "\n",
+    "pet = {\n",
+    "    'name' : 'riku',\n",
+    "    'kind' : 'cat',\n",
+    "    'owner' : 'alfi',\n",
+    "}\n",
+    "pets.append(pet)\n",
+    "\n",
+    "pet = {\n",
+    "    'name' : 'pilu',\n",
+    "    'kind' : 'chicken',\n",
+    "    'owner' : 'shahar',\n",
+    "}\n",
+    "pets.append(pet)\n",
+    "\n",
+    "for pet in pets:\n",
+    "    print(f\"\\nHere's what I know about {pet['name'].title()}:\")\n",
+    "    for info, description in pet.items():\n",
+    "        print(f\"\\t{info}: {description.title()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr>\n",
+    "**6-9. Favorite Places:** Make a dictionary called favorite_places. Think of three names to use as keys in the dictionary, and store one to three favorite places for each person. To make this exercise a bit more interesting, ask some friends to name a few of their favorite places. Loop through the dictionary, and print each person’s name and their favorite places."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Ohi loves Karnaphuli very much.\nAlfi loves Parki Beach very much.\nShahar loves Dhaka very much.\n"
+    }
+   ],
+   "source": [
+    "favorite_places = {\n",
+    "    'ohi' : 'karnaphuli',\n",
+    "    'alfi' : 'parki beach',\n",
+    "    'shahar' : 'dhaka',\n",
+    "}\n",
+    "for name, place in favorite_places.items():\n",
+    "    print(f\"{name.title()} loves {place.title()} very much.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "\n Ohi likes the following places: \n- Karnaphuli\n- Sylhet\n- Rajshahi\n\n Alfi likes the following places: \n- Parki Beach\n- Padma\n\n Shahar likes the following places: \n- Dhaka\n- Barishal\n"
+    }
+   ],
+   "source": [
+    "# Author's way:\n",
+    "favorite_places = {\n",
+    "    'ohi' : ['karnaphuli', 'sylhet', 'rajshahi'],\n",
+    "    'alfi' : ['parki beach', 'padma'], \n",
+    "    'shahar' : ['dhaka', 'barishal'],\n",
+    "}\n",
+    "for name, places in favorite_places.items():\n",
+    "    print(f\"\\n {name.title()} likes the following places: \")\n",
+    "    for place in places:\n",
+    "        print(f\"- {place.title()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr>\n",
+    "**6-10. Favorite Numbers:** Modify your program from Exercise 6-2 ( page 102 ) so each person can have more than one favorite number. Then print each person’s name along with their favorite numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "\nDavid's favorite numbers are: \n   4\n\nAbdullah's favorite numbers are: \n   6\n\nAmatullah's favorite numbers are: \n   9\n   5\n\nFatima's favorite numbers are: \n   10\n   5\n   8\n\nOhi's favorite numbers are: \n   20\n\nRitu's favorite numbers are: \n   25\n   6\n"
+    }
+   ],
+   "source": [
+    "favorite_numbers = {\n",
+    "    'david' : [4],\n",
+    "    'abdullah' : [6],\n",
+    "    'amatullah' : [9, 5],\n",
+    "    'fatima' : [10, 5, 8],\n",
+    "    'ohi' : [20],\n",
+    "    'ritu' : [25, 6]\n",
+    "}\n",
+    "for name, numbers in favorite_numbers.items():\n",
+    "    print(f\"\\n{name.title()}'s favorite numbers are: \")\n",
+    "    for number in numbers:\n",
+    "        print(f\"   {number}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
