--- a/day_21/nested_dictionary.ipynb
+++ b/day_21/nested_dictionary.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1597677818112",
+   "name": "python_defaultSpec_1597758192928",
    "display_name": "Python 3.8.5 32-bit"
   }
  },
@@ -199,10 +199,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Jen's favorite languages are:\n\tPython\n\tRuby\nSarah's favorite languages are:\n\tC\nEdward's favorite languages are:\n\tRuby\n\tGo\nPhil's favorite languages are:\n\tPython\n\tHaskell\n"
+    }
+   ],
+   "source": [
+    "favorite_languages = {\n",
+    "    'jen' : ['python', 'ruby'],\n",
+    "    'sarah' : ['c'],\n",
+    "    'edward' : ['ruby', 'go'],\n",
+    "    'phil' : ['python', 'haskell'],\n",
+    "}\n",
+    "for name, languages in favorite_languages.items():\n",
+    "    print(f\"{name.title()}'s favorite languages are:\")\n",
+    "    for language in languages:\n",
+    "        print(f\"\\t{language.title()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Jen's favorite languages are: ['python', 'ruby']\nSarah's favorite languages are: ['c']\nEdward's favorite languages are: ['ruby', 'go']\nPhil's favorite languages are: ['python', 'haskell']\n"
+    }
+   ],
+   "source": [
+    "favorite_languages = {\n",
+    "    'jen' : ['python', 'ruby'],\n",
+    "    'sarah' : ['c'],\n",
+    "    'edward' : ['ruby', 'go'],\n",
+    "    'phil' : ['python', 'haskell'],\n",
+    "}\n",
+    "for name, languages in favorite_languages.items():\n",
+    "    print(f\"{name.title()}'s favorite languages are: {languages}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Jen's favorite languages are: ['python']\nSarah's favorite languages are: ['c']\nEdward's favorite languages are: ['ruby']\nPhil's favorite languages are: ['python']\n"
+    }
+   ],
+   "source": [
+    "favorite_languages = {\n",
+    "    'jen' : ['python'],\n",
+    "    'sarah' : ['c'],\n",
+    "    'edward' : ['ruby'],\n",
+    "    'phil' : ['python'],\n",
+    "}\n",
+    "for name, languages in favorite_languages.items():\n",
+    "    print(f\"{name.title()}'s favorite languages are: {languages}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### A Dictionary in a dictionary:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "\nUsername: aeinstein\n\tFull name: Albert Einstein\n\tLocation: Princeton\n\nUsername: mcurie\n\tFull name: Marie Curie\n\tLocation: Paris\n"
+    }
+   ],
+   "source": [
+    "users = {\n",
+    "    'aeinstein' : {\n",
+    "        'first' : 'albert',\n",
+    "        'last' : 'einstein',\n",
+    "        'location' : 'princeton',\n",
+    "        },\n",
+    "    'mcurie' : {\n",
+    "        'first' : 'marie',\n",
+    "        'last' : 'curie',\n",
+    "        'location' : 'paris',\n",
+    "    },\n",
+    "}\n",
+    "for username, user_info in users.items():\n",
+    "    print(\"\\nUsername: \" + username)\n",
+    "    full_name = user_info['first'] + ' ' + user_info['last']\n",
+    "    location = user_info['location']\n",
+    "    print(\"\\tFull name: \" + full_name.title())\n",
+    "    print(\"\\tLocation: \" + location.title())"
+   ]
   }
  ]
 }
