--- a/day_20/exercises_on_dict.ipynb
+++ b/day_20/exercises_on_dict.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1597757545899",
+   "name": "python_defaultSpec_1598016034279",
    "display_name": "Python 3.8.5 32-bit"
   }
  },
@@ -36,6 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<hr>\n",
     "**6-1. Person:** Use a dictionary to store information about a person you know. Store their first name, last name, age, and the city in which they live. You should have keys such as first_name , last_name , age , and city . Print each piece of information stored in your dictionary.\n"
    ]
   },
@@ -105,6 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<hr>\n",
     "**6-3. Glossary:** A Python dictionary can be used to model an actual dictionary. However, to avoid confusion, let’s call it a glossary.\n",
     "\n",
     "• Think of five programming words you’ve learned about in the previous chapters. Use these words as the keys in your glossary, and store their meanings as values.\n",
@@ -188,6 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<hr>\n",
     "**6-5. Rivers:** Make a dictionary containing three major rivers and the country each river runs through. One key-value pair might be 'nile': 'egypt' .\n",
     "\n",
     "• Use a loop to print a sentence about each river, such as The Nile runs through Egypt .\n",
@@ -262,6 +265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<hr>\n",
     "**6-6. Polling:** Use the code in favorite_languages.py ( page 104 ).\n",
     "\n",
     "• Make a list of people who should take the favorite languages poll. Include some names that are already in the dictionary and some that are not.\n",
@@ -622,11 +626,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<hr>\n",
+    "**6-11. Cities:** Make a dictionary called cities . Use the names of three cities as keys in your dictionary. Create a dictionary of information about each city and include the country that the city is in, its approximate population, and one fact about that city. The keys for each city’s dictionary should be something like country , population , and fact . Print the name of each city and all of the information you have stored about it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "\nCity: Dhaka\n\tCountry: Bangladesh\n\tPopulation: 8.960 million\n\tA short description: This is the capital of Bangladesh. Once Dhaka was a beautiful city, but now it's charms are long gone due to heavy pollution.\n\nCity: Chittagong\n\tCountry: Bangladesh\n\tPopulation: 2.592 million\n\tA short description: Though this is heavily polluted either, but the closeness of the mountain and see beaches has maintained its serenity. I love this city and always will.\n\nCity: Sylhet\n\tCountry: Bangladesh\n\tPopulation: Bangladesh\n\tA short description: Oh, the tea gardens, mountains, natural water reservoir, and the heavy rain make this city amazing.\n\nCity: Aleppo\n\tCountry: Syria\n\tPopulation: 4.6 milion\n\tA short description: Once it was a beautiful city, but today there is nothing but destruction. And the world will say nothing about them. Because the majority of people are Muslims here.\n"
+    }
+   ],
+   "source": [
+    "cities = {\n",
+    "    'Dhaka' : {\n",
+    "        'country' : 'Bangladesh',\n",
+    "        'population' : '8.960 million',\n",
+    "        'fact' : 'This is the capital of Bangladesh. Once Dhaka was a beautiful city, but now it\\'s charms are long gone due to heavy pollution.',\n",
+    "    },\n",
+    "    'Chittagong' : {\n",
+    "        'country' : 'Bangladesh',\n",
+    "        'population' : '2.592 million',\n",
+    "        'fact' : 'Though this is heavily polluted either, but the closeness of the mountain and see beaches has maintained its serenity. I love this city and always will.',\n",
+    "    },\n",
+    "    'Sylhet' : {\n",
+    "        'country' : 'Bangladesh',\n",
+    "        'population' : 'Bangladesh',\n",
+    "        'fact': 'Oh, the tea gardens, mountains, natural water reservoir, and the heavy rain make this city amazing.',\n",
+    "    },\n",
+    "    'Aleppo' : {\n",
+    "        'country' : 'Syria',\n",
+    "        'population' : '4.6 milion',\n",
+    "        'fact' : 'Once it was a beautiful city, but today there is nothing but destruction. And the world will say nothing about them. Because the majority of people are Muslims here.'\n",
+    "    },\n",
+    "}\n",
+    "for city, city_info in cities.items():\n",
+    "    print(f\"\\nCity: {city}\")\n",
+    "    country = city_info['country'].title()\n",
+    "    population = city_info['population']\n",
+    "    fact = city_info['fact']\n",
+    "    print(f'\\tCountry: {country}')\n",
+    "    print(f'\\tPopulation: {population}')\n",
+    "    print(f'\\tA short description: {fact}')\n",
+    "\n",
+    "    "
+   ]
   }
  ]
 }
