--- a/day_20/exercises_on_dict.ipynb
+++ b/day_20/exercises_on_dict.ipynb
@@ -33,8 +33,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "<hr>\n",
     "**6-1. Person:** Use a dictionary to store information about a person you know. Store their first name, last name, age, and the city in which they live. You should have keys such as first_name , last_name , age , and city . Print each piece of information stored in your dictionary.\n"
@@ -165,7 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**6-4. Glossary 2:** Now that you know how to loop through a dictionary, clean up the code from Exercise 6-3 ( page 102 ) by replacing your series of print statements with a loop that runs through the dictionary’s keys and values. When you’re sure that your loop works, add five more Python terms to your glossary. When you run your program again, these new words and meanings should automatically be included in the output."
+    "<hr>**6-4. Glossary 2:** Now that you know how to loop through a dictionary, clean up the code from Exercise 6-3 ( page 102 ) by replacing your series of print statements with a loop that runs through the dictionary’s keys and values. When you’re sure that your loop works, add five more Python terms to your glossary. When you run your program again, these new words and meanings should automatically be included in the output."
    ]
   },
   {
